[package]
name = "door-driver"
description = "An EVDEV driver written in Rust"
author = ["Soham Gumaste <sgumas2@uic.edu>"]
homepage = "https://lug.cs.uic.edu"
repository = "https://github.com/lugatuic/doorkeeper-driver"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.12.0"
xkbcommon = "0.5.0"
